--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_boom_menu
 description: Flutter plugin to implement a Boom Menu, with icons, title, subtitle, animated FAB Icons and hide on scrolling.
 version: 0.0.1
 author: Ralph Noel Bruno, Mohanraj
-homepage:
+homepage: https://github.com/ralphnoel13/flutter_boom_menu
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
